# icCanvas

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  icCanvasManager.txt  icCanvasManager.txt~  linux-gtk-configure.sh  linux-gtk-debug-configure.sh  linux-gtk-debug-make.sh  linux-gtk-make.sh  osx-configure.sh  osx-debug-configure.sh  osx-debug-make.sh  osx-make.sh  osx-package.sh  serialization.txt
api/c/: CMakeLists.txt
api/c/include/: icCanvasManagerC.h
api/c/include/icCanvasManagerC/: icmapplication.h  icmbrushstroke.h  icmbrushtool.h  icmcanvastool.h  icmcanvasview.h  icmdisplaysuite.h  icmdrawing.h  icmrenderer.h  icmrenderscheduler.h  icmtilecache.h  icmzoomtool.h
api/c/include/icCanvasManagerC/cairo/: icmcairodisplaysuite.h  icmcairorenderer.h
api/c/include/icCanvasManagerC/gl/: icmglcontextmanager.h  icmgldisplaysuite.h  icmglrenderer.h
api/c/src/: icmapplication.cpp  icmbrushstroke.cpp  icmbrushtool.cpp  icmcairodisplaysuite.cpp  icmcairorenderer.cpp  icmcanvastool.cpp  icmcanvasview.cpp  icmdisplaysuite.cpp  icmdrawing.cpp  icmglcontextmanager.cpp  icmgldisplaysuite.cpp  icmglrenderer.cpp  icmrenderer.cpp  icmrenderscheduler.cpp  icmtilecache.cpp  icmzoomtool.cpp
api/cpp/: CMakeLists.txt
api/objc/: CMakeLists.txt
api/objc/include/: __icCanvasManagerObjCBridge.hpp  icCanvasManagerObjC.h
api/objc/include/__icCanvasManagerObjCBridge/gl/: contextmanager.objc.hpp
api/objc/include/icCanvasManagerObjC/: ICMApplication.h  ICMApplicationDelegate.h  ICMBrushStroke.h  ICMBrushTool.h  ICMBrushToolDelegate.h  ICMCanvasTool.h  ICMCanvasView.h  ICMDisplaySuite.h  ICMDrawing.h  ICMRenderScheduler.h  ICMRenderer.h  ICMSplineFitter.h  ICMTileCache.h  ICMZoomTool.h  ICMZoomToolDelegate.h
api/objc/include/icCanvasManagerObjC/cairo/: ICMCairoDisplaySuite.h  ICMCairoRenderer.h
api/objc/include/icCanvasManagerObjC/gl/: ICMGLContextManager.h  ICMGLDisplaySuite.h  ICMGLRenderer.h
api/objc/src/: ICMApplication.mm  ICMBrushStroke.mm  ICMBrushTool.mm  ICMCairoDisplaySuite.mm  ICMCairoRenderer.mm  ICMCanvasTool.mm  ICMCanvasView.mm  ICMDisplaySuite.mm  ICMDrawing.mm  ICMGLDisplaySuite.mm  ICMGLRenderer.mm  ICMRenderScheduler.mm  ICMRenderer.mm  ICMSplineFitter.mm  ICMTileCache.mm  ICMZoomTool.mm  __gl.contextmanager.objc.mm
api/vala/: CMakeLists.txt
api/vala/vapi/: icCanvasManager.vapi
frontends/appkit/: CMakeLists.txt
frontends/appkit/include/: AngleGradientLayer.h  PlatformGL.h  icCanvasAppKit.h
frontends/appkit/include/icCanvasAppKit/: ICAKAppDelegate.h  ICAKCanvasView.h  ICAKColorPickerView.h  ICAKDock.h  ICAKDockableColorPanel.h  ICAKDockablePanel.h  ICAKDockableToolbar.h  ICAKDockableView.h  ICAKDockableViewDelegate.h  ICAKDockingController.h  ICAKDockingRow.h  ICAKDrawing.h  ICAKDrawingController.h  ICAKEnums.h  ICAKGLContextManager.h  ICAKPanelController.h  ICAKRadialGradientLayer.h  ICAKToolPaletteController.h
frontends/appkit/modules/: BuildCairo.cmake
frontends/appkit/resources/: Info.plist
frontends/appkit/src/: AngleGradientLayer.m  ICAKAppDelegate.m  ICAKCanvasView.m  ICAKColorPickerView.m  ICAKDock.m  ICAKDockableColorPanel.m  ICAKDockablePanel.m  ICAKDockableToolbar.m  ICAKDockableView.m  ICAKDockingController.m  ICAKDockingRow.m  ICAKDrawing.m  ICAKDrawingController.m  ICAKGLContextManager.m  ICAKPanelController.m  ICAKRadialGradientLayer.m  ICAKToolPaletteController.m  main.m
frontends/gtk/: CMakeLists.txt
frontends/gtk-glibmm/include/: icCanvasGtk.hpp
frontends/gtk-glibmm/include/icCanvasGtk/: CanvasWidget.hpp
frontends/gtk-glibmm/src/: CanvasWidget.cpp  main.cpp
frontends/gtk/include/: PlatformGL.h  icCanvasGtk.hpp
frontends/gtk/include/icCanvasGtk/: CanvasWidget.hpp
frontends/gtk/platform/gnulinux-desktop/: CMakeLists.txt
frontends/gtk/src/: Application.vala  CanvasWidget.cpp  CanvasWidget.vala  Dock.vala  Dockable.vala  DockablePanel.vala  DockablePanelTest.vala  DockableToolbar.vala  DockingBox.vala  DockingController.vala  DockingPort.vala  Drawing.vala  DrawingWindow.vala  FloatingPanelDock.vala  GLXContextManager.vala  ICM_XDefaultRootWindow.c  ToolController.vala  WindowDock.vala  main.cpp  main.vala
frontends/gtk/vapi/: glx.vapi
frontends/osx/include/: icCanvasAppKit.h
frontends/osx/include/icCanvasAppKit/: ICAKAppDelegate.h
frontends/osx/src/: ICAKAppDelegate.m  main.m
include/: icCanvasManager.hpp  icCanvasManager.h~
include/icCanvasManager/: application.hpp  arcfitter.hpp  brushstroke.hpp  brushstroke.h~  brushtool.hpp  cairorenderer.hpp  canvastool.hpp  canvasview.hpp  delegator.hpp  displaysuite.hpp  displaysuite_tile.hpp  drawing.hpp  mvarc.hpp  mvbeizer.hpp  mvbeizer.hpp~  refcnt.hpp  refptr.hpp  renderer.hpp  renderscheduler.hpp  rk4integrate.hpp  singleton.hpp  splinefitter.hpp  tilecache.hpp  zoomtool.hpp
include/icCanvasManager/cairo/: displaysuite.hpp  renderer.hpp
include/icCanvasManager/cpu/: displaysuite.hpp  renderer.hpp
include/icCanvasManager/gl/: contextmanager.hpp  displaysuite.hpp  extensions.hpp  renderer.hpp
modules/: BuildCairo.cmake  ExternalProject.cmake  FindEigen.cmake
resources/shaders/glsl/: brushstroke.frag.glsl  raymarch.vert.glsl
src/: application.cpp  arcfitter.cpp  brushstroke.cpp  brushstroke.cpp~  brushtool.cpp  cairo.displaysuite.cpp  cairo.renderer.cpp  cairorenderer.cpp  canvastool.cpp  canvasview.cpp  cpu.displaysuite.cpp  cpu.renderer.cpp  displaysuite.cpp  drawing.cpp  gl.contextmanager.cpp  gl.displaysuite.cpp  gl.extensions.cpp  gl.renderer.cpp  refcnt.cpp  renderer.cpp  renderscheduler.cpp  splinefitter.cpp  tilecache.cpp  zoomtool.cpp
tools/: extractxz.py  fakepkgcfg.py
